# adatip

./: Procfile  README.md  flake.nix  shell.nix
.github/workflows/: README.md  ci.yml
adatipd/: .gitignore  README.md  adatipd.cabal  cabal.project.local
adatipd/executable/: adatipd.hs
adatipd/src/Adatipd/: Api.hs  Cardano.hs  Creator.hs  Nickname.hs  Options.hs  Sql.hs  WaiUtil.hs  Web.hs
adatipd/src/Adatipd/Cardano/: Address.hs  Token.hs  Util.hs  Wallet.hs
adatipd/src/Adatipd/Web/: AdminStatus.hs  Context.hs  CreatorHome.hs  CreatorLayout.hs  CreatorLogOut.hs  CreatorPosts.hs  CreatorTiers.hs  CreatorTipSuggestions.hs  Layout.hs  NotFound.hs
adatipd/src/Crypto/: Argon2.hs
adatipd/src/Crypto/Argon2/: FFI.hsc
adatipd/static/: admin.scss  creator-banner.scss  creator-log-out.scss  creator-posts.scss  creator-tabs.scss  creator-tiers.scss  creator-tip-suggestions.scss  stylesheet.css  stylesheet.scss
adatipd/test-unit/: Main.hs  Spec.hs
adatipd/test-unit/Adatipd/: CardanoSpec.hs  E2ETest.hs  NicknameSpec.hs  SqlTest.hs  SubscriberSpec.hs  WebSpec.hs
adatipd/test-unit/Adatipd/Cardano/: Testnet.hs
adatipd/test-unit/Adatipd/Sql/: Test.hs
adatipd/test-unit/data/: README.md  v2-network-information-1.json  v2-network-information-2.json  v2-network-information-3.json
database/: 0000002.sql  0001-genesis.sql  0002-default-privileges.sql  0002-nicknames.sql  0003-creator-info.sql  0004-nicknames.sql  0005-payments.sql  0005-posts.sql  0006-login.sql  0007-session.sql
nix/: cardano-config.nix  cardano-node.nix  cardano-wallet.nix  cardano.nix
nix/cardano-node/: default.nix  pinned.toml
nix/nixpkgs/: default.nix  pinned.toml
scripts/: check-migrations.py  ci.bash  dbmate.bash  nginx.conf  nginx.mime.conf  pg_hba.conf  pg_ident.conf  postgresql.conf  run-adatipd.bash  run-cardano-node.bash  run-cardano-wallet.bash  run-nginx.bash  run-postgres.bash  run-sassc.bash  seed-database.bash  setup-database.bash  vscode.bash  wait-postgres-ready.bash
scripts/ci/: db-setup.bash  test.bash  tests.bash
state/: .gitignore  README.md
state/postgresql/: .gitignore
