cabal-version: 3.0
-- SPDX-License-Identifier: AGPL-3.0-only

name: adatipd
version: 0.0.0.0

common haskell-settings

    -- Only list extensions that do not impact code that doesn’t need them.
    -- Other extensions should be explicitly enabled with LANGUAGE pragmas.
    default-extensions:
        DeriveAnyClass
        DerivingStrategies
        LambdaCase
        NamedFieldPuns
        NumericUnderscores
        RecordWildCards
        ViewPatterns

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

library

    import:
        haskell-settings

    hs-source-dirs:
        src

    exposed-modules:
        Adatipd.Cardano.Address
        Adatipd.Cardano.Token
        Adatipd.Cardano.Util
        Adatipd.Cardano.Wallet
        Adatipd.Creator
        Adatipd.Nickname
        Adatipd.Options
        Adatipd.Sql
        Adatipd.WaiUtil
        Adatipd.Web
        Adatipd.Web.AdminStatus
        Adatipd.Web.CreatorLayout
        Adatipd.Web.CreatorPosts
        Adatipd.Web.CreatorTiers
        Adatipd.Web.CreatorTipSuggestions
        Adatipd.Web.Layout
        Adatipd.Web.NotFound

    build-depends:
        aeson,
        base,
        blaze-html,
        blaze-markup,
        bytestring,
        hasql,
        http-client,
        http-types,
        mtl,
        optparse-applicative,
        postgresql-binary,
        qrcode-core,
        qrcode-juicypixels,
        scientific,
        text,
        time,
        transformers,
        vector,
        wai

executable adatipd

    import:
        haskell-settings

    hs-source-dirs:
        executable

    main-is:
        adatipd.hs

    build-depends:
        adatipd,
        base,
        optparse-applicative,
        warp

test-suite test-unit

    import:
        haskell-settings

    type:
        exitcode-stdio-1.0

    hs-source-dirs:
        test-unit

    main-is:
        Spec.hs

    other-modules:
        Adatipd.CardanoSpec
        Adatipd.NicknameSpec
        Adatipd.Sql.Test
        Adatipd.WebSpec

    build-depends:
        adatipd,
        aeson,
        base,
        bytestring,
        hasql,
        hedgehog,
        hspec,
        hspec-discover,
        hspec-expectations,
        hspec-hedgehog,
        process,
        temporary,
        text,
        time
