cabal-version: 3.0
-- SPDX-License-Identifier: AGPL-3.0-only

name: adatipd
version: 0.0.0.0

common haskell-settings

    -- Only list extensions that do not impact code that doesn’t need them.
    -- Other extensions should be explicitly enabled with LANGUAGE pragmas.
    default-extensions:
        DeriveAnyClass
        DerivingStrategies
        GeneralizedNewtypeDeriving
        LambdaCase
        NamedFieldPuns
        NumericUnderscores
        RecordWildCards
        ViewPatterns

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -threaded
        -rtsopts
        -with-rtsopts=-N

library

    import:
        haskell-settings

    cpp-options:
        -DUSE_SYSTEM_ARGON2=1

    hs-source-dirs:
        src

    exposed-modules:
        Adatipd.Cardano.Address
        Adatipd.Cardano.Token
        Adatipd.Cardano.Util
        Adatipd.Cardano.Wallet
        Adatipd.Creator
        Adatipd.Nickname
        Adatipd.Options
        Adatipd.Sql
        Adatipd.WaiUtil
        Adatipd.Web
        Adatipd.Web.AdminStatus
        Adatipd.Web.Context
        Adatipd.Web.CreatorLayout
        Adatipd.Web.CreatorPosts
        Adatipd.Web.CreatorTiers
        Adatipd.Web.CreatorTipSuggestions
        Adatipd.Web.Layout
        Adatipd.Web.NotFound
        Crypto.Argon2
        Crypto.Argon2.FFI

    build-depends:
        aeson,
        base,
        binary,
        blaze-html,
        blaze-markup,
        bytestring,
        cookie,
        deepseq,
        hasql,
        http-client,
        http-types,
        mtl,
        optparse-applicative,
        postgresql-binary,
        qrcode-core,
        qrcode-juicypixels,
        scientific,
        text,
        text-short,
        time,
        transformers,
        uuid,
        uuid-types,
        vector,
        wai

executable adatipd

    import:
        haskell-settings

    hs-source-dirs:
        executable

    main-is:
        adatipd.hs

    build-depends:
        adatipd,
        base,
        optparse-applicative,
        warp

test-suite test-unit

    import:
        haskell-settings

    type:
        exitcode-stdio-1.0

    hs-source-dirs:
        test-unit

    main-is:
        Main.hs

    other-modules:
        Adatipd.CardanoSpec
        Adatipd.E2ETest
        Adatipd.NicknameSpec
        Adatipd.SqlTest
        Adatipd.WebSpec
        Spec

    build-depends:
        adatipd,
        aeson,
        base,
        bytestring,
        directory,
        hedgehog,
        http-types,
        hspec,
        hspec-discover,
        hspec-expectations,
        hspec-hedgehog,
        process,
        temporary,
        text,
        time,
        transformers,
        wai
